# Letterboxd-Movie-Recommendations

./: .gitignore  README.md  TMDB_vectorization.py  cosine_api_testing.py  cosine_similarity.py  helper_functions.py  main.py  movie_selection_testing.py  pyproject.toml  requirements.txt  vectorization.py
Testing/: TMDB_api_testing.py  cosine_similarity_old.py  file_testing.py  letterboxd_testing.py  movie_selection_testing.py  movie_vectorization_testing.py
