[project]
name = "letterboxd-movie-recommendations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "tmdbv3api>=1.9.0",
    "uvicorn[standard]>=0.34.3",
]
